[feat] 0右埋め